Object_Profile/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Exclude_C_01_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Approvals when this field is checked then this product should not trigger approvals</description>
        <label>Exclude C-01 approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_in_CPQ_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, product will not be included in CPQ approvals.</description>
        <inlineHelpText>If checked, product will not be included in CPQ approvals.</inlineHelpText>
        <label>Exclude in CPQ Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_on_Proposal_output__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude on Proposal output ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>